--- a/flaskr/templates/show_entries.html
+++ b/flaskr/templates/show_entries.html
@@ -7,7 +7,7 @@
 				<dd><input typ=text size=30 name=title>
 				<dt>Text:
 				<dd><textarea name=text rows=5 cols=40></textarea>
-				<dd><iomput type=submit value=Share>
+				<dd><input type=submit value=Share>
 			</dl>
 		</form>
 	{% endif %}
